Added lectures notes and modified labs till C2.W3

--- a/C1 - Supervised Machine Learning - Regression and Classification/week1/Optional Labs/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
+++ b/C1 - Supervised Machine Learning - Regression and Classification/week1/Optional Labs/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6c50bb72",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -18,6 +19,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4960c1e",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -34,6 +36,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0506cca4",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -45,6 +48,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34a62af8",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -58,6 +62,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "977830ef",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -69,6 +74,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56417e32",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -82,6 +88,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "049a5544",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -93,7 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "id": "e5a03784",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -115,6 +123,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35a6d93f",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -135,6 +144,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3beaa96",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -149,7 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "id": "c3df5d52",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -172,6 +183,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c955e537",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -185,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
