--- a/C2 - Advanced Learning Algorithms/week4/C2W4A1/C2_W4_Decision_Tree_with_Markdown.ipynb
+++ b/C2 - Advanced Learning Algorithms/week4/C2W4A1/C2_W4_Decision_Tree_with_Markdown.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c049e7e6",
    "metadata": {},
    "source": [
     "# Practice Lab: Decision Trees\n",
@@ -27,6 +28,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2a1d9de",
    "metadata": {},
    "source": [
     "<a name=\"1\"></a>\n",
@@ -40,7 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "id": "53c564e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +56,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "629f6c45",
    "metadata": {},
    "source": [
     "<a name=\"2\"></a>\n",
@@ -125,7 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
+   "id": "66f58653",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,6 +140,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2106d35d",
    "metadata": {},
    "source": [
     "#### View the variables\n",
@@ -146,7 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "id": "faf947b8",
    "metadata": {},
    "outputs": [
     {
@@ -170,6 +177,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a8f8976",
    "metadata": {},
    "source": [
     "Now, let's do the same for `y_train`"
@@ -177,7 +185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "id": "7338c060",
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +205,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d930b521",
    "metadata": {},
    "source": [
     "#### Check the dimensions of your variables\n",
@@ -207,7 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "id": "d68b5ce7",
    "metadata": {},
    "outputs": [
     {
@@ -228,6 +239,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "24fc4615",
    "metadata": {},
    "source": [
     "<a name=\"4\"></a>\n",
@@ -254,6 +266,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c87e47bc",
    "metadata": {},
    "source": [
     "<a name=\"4.1\"></a>\n",
@@ -282,7 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
+   "id": "76137ef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +320,7 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    if len(y) != 0:\n",
-    "        p1 = p1 = len(y[y == 1]) / len(y) \n",
+    "        p1 = len(y[y == 1]) / len(y) \n",
     "     # For p1 = 0 and 1, set the entropy to 0 (to handle 0log0)\n",
     "        if p1 != 0 and p1 != 1:\n",
     "             entropy = -p1 * np.log2(p1) - (1 - p1) * np.log2(1 - p1)\n",
@@ -319,6 +333,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba3851f7",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -379,6 +394,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e169236a",
    "metadata": {},
    "source": [
     "You can check if your implementation was correct by running the following test code:"
@@ -386,7 +402,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
+   "id": "1bbc33b2",
    "metadata": {},
    "outputs": [
     {
@@ -410,6 +427,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89f918a9",
    "metadata": {},
    "source": [
     "**Expected Output**:\n",
@@ -422,6 +440,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b7f16bf",
    "metadata": {},
    "source": [
     "<a name=\"4.2\"></a>\n",
@@ -461,7 +480,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
+   "id": "669461f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,6 +520,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ce5eeca",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -539,6 +560,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1f5a747",
    "metadata": {},
    "source": [
     "Now, let's check your implementation using the code blocks below. Let's try splitting the dataset at the root node, which contains all examples at feature 0 (Brown Cap) as we'd discussed above"
@@ -546,7 +568,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
+   "id": "6f3a51c5",
    "metadata": {},
    "outputs": [
     {
@@ -577,6 +600,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a3aa94c",
    "metadata": {},
    "source": [
     "**Expected Output**:\n",
@@ -588,6 +612,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58f285fd",
    "metadata": {},
    "source": [
     "<a name=\"4.3\"></a>\n",
@@ -616,7 +641,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
+   "id": "39d60f1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,6 +696,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ccfb1e58",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -748,6 +775,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b8c9627",
    "metadata": {},
    "source": [
     "You can now check your implementation using the cell below and calculate what the information gain would be from splitting on each of the featues"
@@ -755,7 +783,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
+   "id": "412482de",
    "metadata": {},
    "outputs": [
     {
@@ -785,6 +814,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff8285dc",
    "metadata": {},
    "source": [
     "**Expected Output**:\n",
@@ -797,6 +827,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "881397a2",
    "metadata": {},
    "source": [
     "Splitting on \"Solitary\" (feature = 2) at the root node gives the maximum information gain. Therefore, it's the best feature to split on at the root node."
@@ -804,6 +835,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d732e05",
    "metadata": {},
    "source": [
     "<a name=\"4.4\"></a>\n",
@@ -821,7 +853,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
+   "id": "d0412265",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,6 +897,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fbd2f6c4",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -917,6 +951,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07460380",
    "metadata": {},
    "source": [
     "Now, let's check the implementation of your function using the cell below."
@@ -924,7 +959,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
+   "id": "b14aa464",
    "metadata": {},
    "outputs": [
     {
@@ -946,6 +982,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0a5f20ea",
    "metadata": {},
    "source": [
     "As we saw above, the function returns that the best feature to split on at the root node is feature 2 (\"Solitary\")"
@@ -953,6 +990,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7d80ce54",
    "metadata": {},
    "source": [
     "<a name=\"5\"></a>\n",
@@ -965,12 +1003,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
+   "id": "7509d8ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Not graded\n",
-    "tree = []\n",
+    "#tree = [] #LO commented out\n",
     "\n",
     "def build_tree_recursive(X, y, node_indices, branch_name, max_depth, current_depth):\n",
     "    \"\"\"\n",
@@ -996,7 +1035,7 @@
     "    # Otherwise, get best split and split the data\n",
     "    # Get the best feature and threshold at this node\n",
     "    best_feature = get_best_split(X, y, node_indices) \n",
-    "    tree.append((current_depth, branch_name, best_feature, node_indices))\n",
+    "    #tree.append((current_depth, branch_name, best_feature, node_indices)) # LO commented out\n",
     "    \n",
     "    formatting = \"-\"*current_depth\n",
     "    print(\"%s Depth %d, %s: Split on feature: %d\" % (formatting, current_depth, branch_name, best_feature))\n",
@@ -1011,7 +1050,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
+   "id": "ecea9a3f",
    "metadata": {},
    "outputs": [
     {
@@ -1035,6 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1060fab7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1042,7 +1083,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1056,7 +1097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
